# scheng

./: Cargo.toml  PATCH.md  README-EDITOR.md  README.md  STABILITY.md  VERSIONING.md  _config.yml  log.txt  schengine-sinks-milestones.txt  shadecore_example_commands.md  shadecore_examples_overview.md
buildfiles/: graph.json
ci/: check_forbidden_deps.sh  forbidden_deps.txt
crates/scheng-bridge/: Cargo.toml
crates/scheng-bridge/src/: main.rs  main.rs.bak  midi.rs  osc.rs  protocol.rs  registry.rs  state.rs  ws.rs  ws.rs.bak2
crates/scheng-buffers/: Cargo.toml
crates/scheng-buffers/src/: lib.rs
crates/scheng-contract-tests/: Cargo.toml
crates/scheng-contract-tests/fixtures/: banks_bad_preset.json  banks_builtin.json  banks_empty.json  banks_missing_key.json
crates/scheng-contract-tests/src/: determinism.rs  lib.rs
crates/scheng-control-osc/: Cargo.toml
crates/scheng-control-osc/src/: lib.rs
crates/scheng-core/: Cargo.toml
crates/scheng-core/src/: assets.rs  config.rs  error.rs  events.rs  lib.rs
crates/scheng-editor/: scheng-editor (1).html  scheng-editor (11).html  scheng-editor (12).html  scheng-editor (13).html  scheng-editor (14).html  scheng-editor (15).html  scheng-editor (16).html  scheng-editor (17).html  scheng-editor (19).html  scheng-editor (21).html  scheng-editor (22).html  scheng-editor (23).html  scheng-editor (24).html  scheng-editor (25).html  scheng-editor (3).html  scheng-editor (4).html  scheng-editor (5).html  scheng-editor (6).html  scheng-editor (7).html  scheng-editor (8).html  scheng-editor-fixed.html  scheng-editor.html  scheng-editor20.html
crates/scheng-graph/: Cargo.toml
crates/scheng-graph/src/: lib.rs  protocol.rs  state.rs
crates/scheng-host-winit/: Cargo.toml
crates/scheng-host-winit/src/: lib.rs
crates/scheng-input-video/: Cargo.toml
crates/scheng-input-video/src/: shadecore-input-video-lib.rs
crates/scheng-input-webcam/: Cargo.toml
crates/scheng-input-webcam/src/: lib.rs
crates/scheng-passes/: Cargo.toml
crates/scheng-passes/src/: lib.rs
crates/scheng-runtime/: Cargo.toml
crates/scheng-runtime-glow/: Cargo.toml  build.rs
crates/scheng-runtime-glow/native/: syphon_bridge.m
crates/scheng-runtime-glow/src/: lib.rs
crates/scheng-runtime/src/: lib.rs  runtime_contract.rs
crates/scrubbable_controls/: Cargo.toml  README.md  keymap.json  osc_map.json
crates/scrubbable_controls/src/: lib.rs
crates/sdk-compat/: Cargo.toml
crates/sdk-compat/src/: lib.rs
examples/: OUTPUT_SURFACE_MATRIX.md  README.md
examples/feedback_orb/: Cargo.toml
examples/feedback_orb/src/: main.rs
examples/feedback_pingpong/: Cargo.toml
examples/feedback_pingpong/src/: main.rs
examples/graph_chain2/: Cargo.toml
examples/graph_chain2/src/: main.rs
examples/graph_matrix_mix4/: Cargo.toml  banks.json
examples/graph_matrix_mix4/src/: banks.rs  main.rs  quant.rs  queue.rs  transition.rs
examples/graph_matrix_mix4_webcam/: Cargo.toml  shader_b.glsl  shader_g.glsl  shader_present.glsl  shader_r.glsl  shader_webcam_pass.glsl
examples/graph_matrix_mix4_webcam/src/: main.rs
examples/graph_minimal/: Cargo.toml
examples/graph_minimal/src/: main.rs
examples/graph_mixer2/: Cargo.toml
examples/graph_mixer2/src/: main.rs
examples/graph_mixer_builtin/: Cargo.toml  build.rs
examples/graph_mixer_builtin/native/: syphon_bridge.h  syphon_bridge.m
examples/graph_mixer_builtin/src/: main.rs
examples/graph_webcam_luma_key/: Cargo.toml
examples/graph_webcam_luma_key/shaders/: layer_a.frag  layer_b.frag  layer_c.frag  webcam_luma_key_mix4.frag
examples/graph_webcam_luma_key/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/osc_minimal/: Cargo.toml
examples/osc_minimal/src/: main.rs
examples/pure_single_pass/: Cargo.toml
examples/pure_single_pass/src/: main.rs
examples/readback_minimal/: Cargo.toml  README_STEP8_APPEND.md  shader_frag.glsl
examples/readback_minimal/src/: main.rs
examples/render_target_only/: Cargo.toml
examples/render_target_only/src/: main.rs
examples/static_source_minimal/: Cargo.toml
examples/static_source_minimal/src/: main copy.rs  main.rs
examples/syphon_builtin_legacy/: Cargo.toml
examples/syphon_builtin_legacy/src/: main.rs
examples/syphon_minimal/: Cargo.toml  README_STEP8_APPEND.md  shader_frag.glsl
examples/syphon_minimal/src/: main.rs
examples/syphon_patchbay/: Cargo.toml  README_STEP8_APPEND.md
examples/syphon_patchbay/src/: main.rs
examples/temporal_slitscan/: Cargo.toml
examples/temporal_slitscan/src/: main.rs
examples/texture_input_minimal/: Cargo.toml  shader_frag.glsl
examples/texture_input_minimal/src/: main copy.rs  main.rs
examples/video_decode_source_minimal/: Cargo.toml  keymap.json  video_config.json
examples/video_decode_source_minimal/src/: main.rs
examples/video_device_capture_macos/: Cargo.toml
examples/video_device_capture_macos/src/: main.rs
examples/video_scrub_keyboard_transport/: Cargo.toml  video_config.json
examples/video_scrub_keyboard_transport/src/: main.rs
examples/video_source_minimal/: Cargo.toml
examples/video_source_minimal/src/: main.rs
examples/webcam_source_minimal/: Cargo.toml
examples/webcam_source_minimal/src/: main.rs
max/: README.md  feedback_orb.maxpat  feedback_pingpong.maxpat  shadecore-OSC-buffer.original.maxpat  temporal_slitscan.maxpat
native/spout_bridge/: spout_bridge.cpp
patches/: 0001-shadecore-graph-add-TextureInputPass.patch  0002-runtime-glow-TextureInputPass-support.patch  0003-runtime-glow-buildrs-clippy.patch
tests/: test_all_examples.sh  tests-sequential-examples.sh  tests.sh
