[package]
name = "scheng-example-graph-chain2"
version = "0.1.0"
edition = "2021"

[dependencies]
scheng-core = { path = "../../crates/scheng-core" }
scheng-graph = { path = "../../crates/scheng-graph" }
scheng-runtime-glow = { path = "../../crates/scheng-runtime-glow" }

glow = "0.13"
winit = "0.28"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5"
