[package]
name = "scheng-example-graph-webcam-luma-key"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
scheng-core = { path = "../../crates/scheng-core" }
scheng-graph = { path = "../../crates/scheng-graph" }
scheng-runtime = { path = "../../crates/scheng-runtime" }
scheng-runtime-glow = { path = "../../crates/scheng-runtime-glow" }

scheng-input-webcam = { path = "../../crates/scheng-input-webcam", features = ["native"] }
scheng-control-osc = { path = "../../crates/scheng-control-osc" }

glow = "0.13"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5"
winit = "0.28"
