[package]
name = "scheng-example-osc-minimal"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
scheng-runtime-glow = { path = "../../crates/scheng-runtime-glow" }
scheng-control-osc = { path = "../../crates/scheng-control-osc" }

glow = "0.13"

# Host/window/context for runnable example (version-aligned set)
winit = "0.28"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5"

