[package]
name = "scheng-example-readback-minimal"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
glow = "0.13"
winit = "0.28"
raw-window-handle = "0.5"

glutin = "0.30"
glutin-winit = "0.3"

scheng-graph = { path = "../../crates/scheng-graph" }
scheng-runtime-glow = { path = "../../crates/scheng-runtime-glow" }
