[package]
name = "scheng-example-syphon-patchbay"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "0.13"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5"
winit = "0.28"

scheng-graph = { path = "../../crates/scheng-graph" }
scheng-runtime-glow = { path = "../../crates/scheng-runtime-glow", default-features = false }

[features]
default = ["syphon"]
syphon = ["scheng-runtime-glow/syphon"]
