[package]
name = "scheng-example-video-device-capture-macos"
version = "0.1.0"
edition = "2021"

[dependencies]
scheng-graph = { path = "../../crates/scheng-graph" }
scheng-runtime-glow = { path = "../../crates/scheng-runtime-glow" }
scheng-runtime = { path = "../../crates/scheng-runtime" }
scheng-core = { path = "../../crates/scheng-core" }
scrubbable_controls = { path = "../../crates/scrubbable_controls" }

# Webcam backend (stable, unchanged)
scheng-input-webcam = { path = "../../crates/scheng-input-webcam", features = ["native"] }

# FFmpeg backend reuse
scheng-input-video = { path = "../../crates/scheng-input-video" }

glow = "0.13"
glutin = "0.30"
glutin-winit = "0.3"
raw-window-handle = "0.5"
winit = "0.28"
bytemuck = "1"

# Enumeration only
nokhwa = { version = "0.10.10", default-features = false, features = ["input-native"] }
